--- a/css/index.css
+++ b/css/index.css
@@ -96,6 +96,13 @@ h2 {
 	margin-bottom: 2rem;
 }
 
+h3 {
+	font-size: 1.5rem;
+	font-family: 'Bricolage Grotesque', sans-serif;
+	font-weight: 400;
+	margin-bottom: 1rem;
+}
+
 p {
 	margin-bottom: 3rem;
 }
@@ -115,3 +122,15 @@ img.logo {
 	margin-right: 1rem;
 }
 
+.publication-list {
+	margin-top: 3rem;
+}
+
+.publication-list p {
+	margin-bottom: 1rem;
+}
+
+.publication {
+	margin: 3rem auto;
+	overflow: auto;
+}
