--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,17 @@ img.logo {
 	margin: 3rem auto;
 	overflow: auto;
 }
+
+@media only screen and (max-width: 768px) {
+	body {
+		font-size: 14px;
+	}
+
+	h1 {
+		font-size: 3rem;
+	}
+
+	h2 {
+		font-size: 1.5rem;
+	}
+}
