--- a/css/index.css
+++ b/css/index.css
@@ -135,6 +135,24 @@ img.logo {
 	overflow: auto;
 }
 
+.contact-info p {
+	margin: 1rem auto;
+}
+
+.contact-info ul {
+	list-style: none;
+}
+
+.contact-info li {
+	margin-bottom: 1rem;
+}
+
+iframe {
+	margin: 2rem auto;
+	width: 100%;
+	max-height: 50vh;
+}
+
 @media only screen and (max-width: 768px) {
 	body {
 		font-size: 14px;
