--- a/css/people.css
+++ b/css/people.css
@@ -4,7 +4,7 @@ header img {
 
 ul.team-members {
 	list-style: none;
-	margin: 2rem auto;
+	margin: 4rem auto;
 	width: 100%;
 }
 
@@ -20,8 +20,9 @@ ul.team-members {
 }
 
 .column-right {
-	flex-grow: 1;
+	flex: 0 0 70%;
 	padding: 1rem 2rem;
+	text-align: left;
 }
 
 h1 {
