--- a/css/index.css
+++ b/css/index.css
@@ -80,15 +80,11 @@ main {
 	top: -5rem;
 }
 
-main, footer {
-	display: block;
-}
-
 footer {
 	background: #203864;
 	display: flex;
 	min-height: 200px;
-	color: #fff;
+	color: #93a5c7;
 	align-items: center;
     justify-content: center;
     font-size: 0.9rem;
@@ -100,9 +96,19 @@ footer {
 	content: '';
 	display: block;
 	margin: 0 auto;
-	height: 20px;
+	height: 10px;
 	width: 33%;
-	border-bottom: 1px solid #fff;
+	border-bottom: 1px solid #93a5c7;
+}
+
+.footer-text p {
+	text-align: center;
+	margin-bottom: 1em;
+}
+
+.footer-text p:first-of-type {
+	font-weight: 900;
+	text-transform: none;
 }
 
 h1 {
